refactor: alerts apis
